feat: add global exception and validation